Reworked HTML to create a single modal (populated with JS) in place of one modal per user.  Inline JS reduced to a single function call to create a JS object arry.  Other inline functions replaced with editusers.js.

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -1,5 +1,83 @@
 {% extends "base.html" %}
 {% block content %}
+    <!-- Modal Structure -->
+    <div id="editUserModal" class="modal">
+        <form class="col s12" method="POST" action="">                                                                    
+            <div class="modal-content">
+                <!-- title and close button -->
+                <div class="modal-title-row row">
+                    <div class="col s11">
+                        <h4 id="modalTitle"></h4>
+                        <input id="modalOrigUserId" class="hidden" name="orig_user_id" type="text" value="">
+                    </div>
+                    <div class="col s1 modal-close-button">
+                        <a class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
+                    </div>
+                </div>
+                <!-- locked -->
+                <div class="row">
+                    <div class="input-field col s12 checkbox-container">
+                        <i class="fas fa-lock prefix light-blue-text text-darken-4"></i>
+                        <label id="modalUserLocked">
+                            <input id="modalUserLockedInput" name="locked" type="checkbox"/>
+                            <span>User Locked?</span>
+                        </label>
+                    </div>
+                </div>
+                <!-- email -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-envelope prefix light-blue-text text-darken-4"></i>
+                        <input id="modalUserEmail" name="email" type="email" class="validate" value="" required>
+                        <label for="modalUserEmail">Email</label>
+                    </div>
+                </div>
+                <!-- username -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+                        <input id="modalUserId" name="user_id" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="" required>
+                        <label for="modalUserId">User Id</label>
+                    </div>
+                </div>
+                <!-- <div class="card-panel"> -->
+                    <!-- change password? -->
+                    <div class="row">
+                        <div class="input-field col s12 checkbox-container noicon">                                                                                    
+                            <label id="modalChangePassword">
+                                <input id="modalChangePasswordInput" type="checkbox"/>
+                                <span>Change Password?</span>
+                            </label>
+                        </div>
+                    </div>
+                    <!-- password -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
+                            <input id="modalUserPwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" disabled="true" required>
+                            <label for="modalUserPwd">Password</label>
+                            <span class="helper-text" data-error="Invalid Password."></span>
+                        </div>
+                    </div>
+                    <!-- password confirmation -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
+                            <input id="modalUserCpwd" name="cPwd" type="password" disabled="true" required>
+                            <label for="modalUserCpwd">Password Confirmation</label>
+                            <span id="modalUserCpwdHlp" class="helper-text" data-error=""></span>
+                        </div>
+                    </div>
+                <!-- </div> -->
+                <!-- save changes -->
+                <div class="row modal-action-container">
+                    <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return modalValidate();">
+                        Save Changes <i class="fas fa-sign-in-alt"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
     <h3 class="light-blue-text text-darken-4 center-align">Manage Users</h3>
     <div class="row">
         <div class="col s12">    
@@ -22,86 +100,8 @@
                                         <div class="collapsible-header"><i class="fas {{ role.role_icon }} fa-fw"></i>{{ role.role_desc }} ({{ role.member_count }})</div>                                    
                                         <div class="collapsible-body">                                        
                                             <ul class="collapsible">
-                                                <ul class="collection">                                                
-                                                    {% for user in users if user.role == role.role %}
-                                                        <!-- Modal Structure -->
-                                                        <div id="{{ user.user_id }}-modal" class="modal">
-                                                            <form class="col s12" method="POST" action="">                                                                    
-                                                                    <div class="modal-content">
-                                                                        <!-- title and close button -->
-                                                                        <div class="modal-title-row row">
-                                                                            <div class="col s11">
-                                                                                <h4>{{ user.user_id|capitalize }}</h4>
-                                                                                <input class="hidden" name="orig_user_id" type="text" value="{{ user.user_id }}">
-                                                                            </div>
-                                                                            <div class="col s1 modal-close-button">
-                                                                                <a class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
-                                                                            </div>
-                                                                        </div>
-                                                                        <!-- locked -->
-                                                                        <div class="row">
-                                                                            <div class="input-field col s12 checkbox-container">
-                                                                                <i class="fas fa-lock prefix light-blue-text text-darken-4"></i>
-                                                                                <label id="{{ user.user_id }}-user-locked">
-                                                                                    <input name="locked" type="checkbox" {{ user.locked }}/>
-                                                                                    <span>User Locked?</span>
-                                                                                </label>
-                                                                            </div>
-                                                                        </div>
-                                                                        <!-- email -->
-                                                                        <div class="row">
-                                                                            <div class="input-field col s12">
-                                                                                <i class="fas fa-envelope prefix light-blue-text text-darken-4"></i>
-                                                                                <input id="{{ user.user_id }}-email" name="email" type="email" class="validate" value="{{ user.email }}" required>
-                                                                                <label for="{{ user.user_id }}-email">Email</label>
-                                                                            </div>
-                                                                        </div>
-                                                                        <!-- username -->
-                                                                        <div class="row">
-                                                                            <div class="input-field col s12">
-                                                                                <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-                                                                                <input id="{{ user.user_id }}-user_id" name="user_id" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="{{ user.user_id }}" required>
-                                                                                <label for="{{ user.user_id }}-user_id">User Id</label>
-                                                                            </div>
-                                                                        </div>
-                                                                        <!-- <div class="card-panel"> -->
-                                                                            <!-- change password? -->
-                                                                            <div class="row">
-                                                                                <div class="input-field col s12 checkbox-container noicon">                                                                                    
-                                                                                    <label id="{{ user.user_id }}-change-password">
-                                                                                        <input id="{{ user.user_id }}-change-password-input" type="checkbox"/>
-                                                                                        <span>Change Password?</span>
-                                                                                    </label>
-                                                                                </div>
-                                                                            </div>
-                                                                            <!-- password -->
-                                                                            <div class="row">
-                                                                                <div class="input-field col s12">
-                                                                                    <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
-                                                                                    <input id="{{ user.user_id }}-pwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" disabled="true" required>
-                                                                                    <label for="{{ user.user_id }}-pwd">Password</label>
-                                                                                    <span class="helper-text" data-error="Invalid Password."></span>
-                                                                                </div>
-                                                                            </div>
-                                                                            <!-- password confirmation -->
-                                                                            <div class="row">
-                                                                                <div class="input-field col s12">
-                                                                                    <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
-                                                                                    <input id="{{ user.user_id }}-cPwd" name="cPwd" type="password" disabled="true" required>
-                                                                                    <label for="{{ user.user_id }}-cPwd">Password Confirmation</label>
-                                                                                    <span id="{{ user.user_id }}-cPwdHlp" class="helper-text" data-error=""></span>
-                                                                                </div>
-                                                                            </div>
-                                                                        <!-- </div> -->
-                                                                        <!-- save changes -->
-                                                                        <div class="row modal-action-container">
-                                                                            <button type="submit" class="modal-close col s12 btn-large light-blue darken-4 text-shadow" onsubmit="return modalPWordValidation('{{ user.user_id }}-change-password-input', '{{ user.user_id }}-pwd', '{{ user.user_id }}-cPwd');">
-                                                                                Save Changes <i class="fas fa-sign-in-alt"></i>
-                                                                            </button>
-                                                                        </div>
-                                                                    </div>
-                                                                </form>
-                                                        </div>
+                                                <ul class="collection">                                                    
+                                                    {% for user in users if user.role == role.role %}                                                        
                                                         <li class="collection-item avatar">
                                                             <ul>
                                                                 <li>
@@ -119,11 +119,10 @@
                                                                         </a>
                                                                     </h6>
                                                                 </li>
-                                                            </ul>
-                                                                                                                
-                                                            <a class="secondary-content light-blue-text text-darken-4 modal-trigger" href="#{{ user.user_id }}-modal">
-                                                                {% if user.locked == True %}
-                                                                    <i class="fas fa-lock fa-fw"></i>
+                                                            </ul>                                                                                                                
+                                                            <a class="secondary-content light-blue-text text-darken-4 modal-trigger" href="#editUserModal" onclick="popModal('{{ user.user_id }}')">
+                                                                {% if user.locked %}
+                                                                    <i class="red-text text-darken-4 fas fa-lock fa-fw"></i>
                                                                 {% else %}
                                                                     <i class="fas fa-unlock fa-fw"></i>
                                                                 {% endif %}
@@ -147,29 +146,8 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/editusers.js') }}"></script>
 <script>
-    {% for user in users %}
-            $("#{{ user.user_id }}-pwd").on("focusout", function () {
-                pWordValidation("{{ user.user_id }}-pwd", "{{ user.user_id }}-cPwd");
-            });
-
-            $("#{{ user.user_id }}-pwd").on("keyup", function () {
-                pWordValidation("{{ user.user_id }}-pwd", "{{ user.user_id }}-cPwd");
-            });
-        
-            $("#{{ user.user_id }}-cPwd").on("keyup", function () {
-                pWordValidation("{{ user.user_id }}-pwd", "{{ user.user_id }}-cPwd");
-            });
-
-            $("#{{ user.user_id }}-change-password-input").on("change", function() {
-                if ($("#{{ user.user_id }}-change-password-input").is(":checked")) {
-                    $("#{{ user.user_id }}-pwd").prop("disabled", false);
-                    $("#{{ user.user_id }}-cPwd").prop("disabled", false);
-                    return;
-                };
-                $("#{{ user.user_id }}-pwd").prop("disabled", true);
-                $("#{{ user.user_id }}-cPwd").prop("disabled", true);
-            });
-    {% endfor %}
+    let userList = createUserArray({{ users | tojson }});    
 </script>
 {% endblock %}
